# play-with-dev-container

./: Makefile  pyproject.toml  readme.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: main.py
